--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 eframe = "0.27.2"
 egui = "0.27.2"
 reqwest = { version = "0.12.4", features = ["json", "blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 strum = { version = "0.26.2", features = ["derive"] }
+toml = "0.8.13"
+trash = "4.1.1"
